Actividad6/expresiones.output
Gramática

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: SALIR '\n'
    4      | ID ASIGNACION expr '\n'
    5      | ID ASIGNACION logica '\n'
    6      | error '\n'

    7 expr: NUMERO
    8     | REAL
    9     | expr '+' expr
   10     | expr '-' expr
   11     | expr '*' expr
   12     | expr '/' expr
   13     | expr DIV expr
   14     | expr '%' expr
   15     | '-' expr
   16     | '(' expr ')'

   17 logica: BOOL
   18       | logica AND logica
   19       | logica OR logica
   20       | NOT logica
   21       | expr DISTINTO expr
   22       | logica DISTINTO logica
   23       | expr IGUAL expr
   24       | logica IGUAL logica
   25       | expr MENORIGUAL expr
   26       | expr MAYOR expr
   27       | expr MAYORIGUAL expr
   28       | expr MENOR expr
   29       | '(' logica ')'


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4 5 6
    '%' (37) 14
    '(' (40) 16 29
    ')' (41) 16 29
    '*' (42) 11
    '+' (43) 9
    '-' (45) 10 15
    '/' (47) 12
    error (256) 6
    SALIR (258) 3
    DIV (259) 13
    AND (260) 18
    OR (261) 19
    NOT (262) 20
    MENOR (263) 28
    MAYORIGUAL (264) 27
    MAYOR (265) 26
    MENORIGUAL (266) 25
    IGUAL (267) 23 24
    DISTINTO (268) 21 22
    ASIGNACION (269) 4 5
    NUMERO <c_entero> (270) 7
    ID <var> (271) 4 5
    REAL <c_real> (272) 8
    BOOL <c_bool> (273) 17
    menos (274)


No terminales con las reglas donde aparecen

    $accept (28)
        on left: 0
    entrada (29)
        on left: 1 2
        on right: 0 2
    linea (30)
        on left: 3 4 5 6
        on right: 2
    expr <c_expresion> (31)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 4 9 10 11 12 13 14 15 16 21 23 25 26 27 28
    logica <c_bool> (32)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 5 18 19 20 22 24 29


Estado 0

    0 $accept: • entrada $end

    $default  reduce usando la regla 1 (entrada)

    entrada  ir al estado 1


Estado 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end   desplazar e ir al estado 2
    error  desplazar e ir al estado 3
    SALIR  desplazar e ir al estado 4
    ID     desplazar e ir al estado 5

    linea  ir al estado 6


Estado 2

    0 $accept: entrada $end •

    $default  aceptar


Estado 3

    6 linea: error • '\n'

    '\n'  desplazar e ir al estado 7


Estado 4

    3 linea: SALIR • '\n'

    '\n'  desplazar e ir al estado 8


Estado 5

    4 linea: ID • ASIGNACION expr '\n'
    5      | ID • ASIGNACION logica '\n'

    ASIGNACION  desplazar e ir al estado 9


Estado 6

    2 entrada: entrada linea •

    $default  reduce usando la regla 2 (entrada)


Estado 7

    6 linea: error '\n' •

    $default  reduce usando la regla 6 (linea)


Estado 8

    3 linea: SALIR '\n' •

    $default  reduce usando la regla 3 (linea)


Estado 9

    4 linea: ID ASIGNACION • expr '\n'
    5      | ID ASIGNACION • logica '\n'

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 16
    logica  ir al estado 17


Estado 10

   20 logica: NOT • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 19


Estado 11

    7 expr: NUMERO •

    $default  reduce usando la regla 7 (expr)


Estado 12

    8 expr: REAL •

    $default  reduce usando la regla 8 (expr)


Estado 13

   17 logica: BOOL •

    $default  reduce usando la regla 17 (logica)


Estado 14

   15 expr: '-' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 21


Estado 15

   16 expr: '(' • expr ')'
   29 logica: '(' • logica ')'

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 22
    logica  ir al estado 23


Estado 16

    4 linea: ID ASIGNACION expr • '\n'
    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   21 logica: expr • DISTINTO expr
   23       | expr • IGUAL expr
   25       | expr • MENORIGUAL expr
   26       | expr • MAYOR expr
   27       | expr • MAYORIGUAL expr
   28       | expr • MENOR expr

    DIV         desplazar e ir al estado 24
    MENOR       desplazar e ir al estado 25
    MAYORIGUAL  desplazar e ir al estado 26
    MAYOR       desplazar e ir al estado 27
    MENORIGUAL  desplazar e ir al estado 28
    IGUAL       desplazar e ir al estado 29
    DISTINTO    desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '/'         desplazar e ir al estado 34
    '%'         desplazar e ir al estado 35
    '\n'        desplazar e ir al estado 36


Estado 17

    5 linea: ID ASIGNACION logica • '\n'
   18 logica: logica • AND logica
   19       | logica • OR logica
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica

    AND       desplazar e ir al estado 37
    OR        desplazar e ir al estado 38
    IGUAL     desplazar e ir al estado 39
    DISTINTO  desplazar e ir al estado 40
    '\n'      desplazar e ir al estado 41


Estado 18

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   21 logica: expr • DISTINTO expr
   23       | expr • IGUAL expr
   25       | expr • MENORIGUAL expr
   26       | expr • MAYOR expr
   27       | expr • MAYORIGUAL expr
   28       | expr • MENOR expr

    DIV         desplazar e ir al estado 24
    MENOR       desplazar e ir al estado 25
    MAYORIGUAL  desplazar e ir al estado 26
    MAYOR       desplazar e ir al estado 27
    MENORIGUAL  desplazar e ir al estado 28
    IGUAL       desplazar e ir al estado 29
    DISTINTO    desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '/'         desplazar e ir al estado 34
    '%'         desplazar e ir al estado 35


Estado 19

   18 logica: logica • AND logica
   19       | logica • OR logica
   20       | NOT logica •
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica

    $default  reduce usando la regla 20 (logica)


Estado 20

   16 expr: '(' • expr ')'

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 42


Estado 21

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   15     | '-' expr •

    $default  reduce usando la regla 15 (expr)


Estado 22

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   16     | '(' expr • ')'
   21 logica: expr • DISTINTO expr
   23       | expr • IGUAL expr
   25       | expr • MENORIGUAL expr
   26       | expr • MAYOR expr
   27       | expr • MAYORIGUAL expr
   28       | expr • MENOR expr

    DIV         desplazar e ir al estado 24
    MENOR       desplazar e ir al estado 25
    MAYORIGUAL  desplazar e ir al estado 26
    MAYOR       desplazar e ir al estado 27
    MENORIGUAL  desplazar e ir al estado 28
    IGUAL       desplazar e ir al estado 29
    DISTINTO    desplazar e ir al estado 30
    '+'         desplazar e ir al estado 31
    '-'         desplazar e ir al estado 32
    '*'         desplazar e ir al estado 33
    '/'         desplazar e ir al estado 34
    '%'         desplazar e ir al estado 35
    ')'         desplazar e ir al estado 43


Estado 23

   18 logica: logica • AND logica
   19       | logica • OR logica
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica
   29       | '(' logica • ')'

    AND       desplazar e ir al estado 37
    OR        desplazar e ir al estado 38
    IGUAL     desplazar e ir al estado 39
    DISTINTO  desplazar e ir al estado 40
    ')'       desplazar e ir al estado 44


Estado 24

   13 expr: expr DIV • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 45


Estado 25

   28 logica: expr MENOR • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 46


Estado 26

   27 logica: expr MAYORIGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 47


Estado 27

   26 logica: expr MAYOR • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 48


Estado 28

   25 logica: expr MENORIGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 49


Estado 29

   23 logica: expr IGUAL • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 50


Estado 30

   21 logica: expr DISTINTO • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 51


Estado 31

    9 expr: expr '+' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 52


Estado 32

   10 expr: expr '-' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 53


Estado 33

   11 expr: expr '*' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 54


Estado 34

   12 expr: expr '/' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 55


Estado 35

   14 expr: expr '%' • expr

    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 20

    expr  ir al estado 56


Estado 36

    4 linea: ID ASIGNACION expr '\n' •

    $default  reduce usando la regla 4 (linea)


Estado 37

   18 logica: logica AND • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 57


Estado 38

   19 logica: logica OR • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 58


Estado 39

   24 logica: logica IGUAL • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 59


Estado 40

   22 logica: logica DISTINTO • logica

    NOT     desplazar e ir al estado 10
    NUMERO  desplazar e ir al estado 11
    REAL    desplazar e ir al estado 12
    BOOL    desplazar e ir al estado 13
    '-'     desplazar e ir al estado 14
    '('     desplazar e ir al estado 15

    expr    ir al estado 18
    logica  ir al estado 60


Estado 41

    5 linea: ID ASIGNACION logica '\n' •

    $default  reduce usando la regla 5 (linea)


Estado 42

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   16     | '(' expr • ')'

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35
    ')'  desplazar e ir al estado 43


Estado 43

   16 expr: '(' expr ')' •

    $default  reduce usando la regla 16 (expr)


Estado 44

   29 logica: '(' logica ')' •

    $default  reduce usando la regla 29 (logica)


Estado 45

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   13     | expr DIV expr •
   14     | expr • '%' expr

    $default  reduce usando la regla 13 (expr)


Estado 46

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   28 logica: expr MENOR expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 28 (logica)


Estado 47

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   27 logica: expr MAYORIGUAL expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 27 (logica)


Estado 48

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   26 logica: expr MAYOR expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 26 (logica)


Estado 49

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   25 logica: expr MENORIGUAL expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 25 (logica)


Estado 50

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   23 logica: expr IGUAL expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 23 (logica)


Estado 51

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   21 logica: expr DISTINTO expr •

    DIV  desplazar e ir al estado 24
    '+'  desplazar e ir al estado 31
    '-'  desplazar e ir al estado 32
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 21 (logica)


Estado 52

    9 expr: expr • '+' expr
    9     | expr '+' expr •
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr

    DIV  desplazar e ir al estado 24
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 9 (expr)


Estado 53

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   10     | expr '-' expr •
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr

    DIV  desplazar e ir al estado 24
    '*'  desplazar e ir al estado 33
    '/'  desplazar e ir al estado 34
    '%'  desplazar e ir al estado 35

    $default  reduce usando la regla 10 (expr)


Estado 54

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   11     | expr '*' expr •
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr

    $default  reduce usando la regla 11 (expr)


Estado 55

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   12     | expr '/' expr •
   13     | expr • DIV expr
   14     | expr • '%' expr

    $default  reduce usando la regla 12 (expr)


Estado 56

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • DIV expr
   14     | expr • '%' expr
   14     | expr '%' expr •

    $default  reduce usando la regla 14 (expr)


Estado 57

   18 logica: logica • AND logica
   18       | logica AND logica •
   19       | logica • OR logica
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica

    IGUAL     desplazar e ir al estado 39
    DISTINTO  desplazar e ir al estado 40

    $default  reduce usando la regla 18 (logica)


Estado 58

   18 logica: logica • AND logica
   19       | logica • OR logica
   19       | logica OR logica •
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica

    AND       desplazar e ir al estado 37
    IGUAL     desplazar e ir al estado 39
    DISTINTO  desplazar e ir al estado 40

    $default  reduce usando la regla 19 (logica)


Estado 59

   18 logica: logica • AND logica
   19       | logica • OR logica
   22       | logica • DISTINTO logica
   24       | logica • IGUAL logica
   24       | logica IGUAL logica •

    $default  reduce usando la regla 24 (logica)


Estado 60

   18 logica: logica • AND logica
   19       | logica • OR logica
   22       | logica • DISTINTO logica
   22       | logica DISTINTO logica •
   24       | logica • IGUAL logica

    $default  reduce usando la regla 22 (logica)
